# rules_nextjs

./: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  index.bzl  internal_deps.bzl  package.json  version.bzl
examples/basic-css/: BUILD.bazel  WORKSPACE  next.config.js  package-lock.json  package.json
examples/with-next-css/: BUILD.bazel  README.md  WORKSPACE  next.config.js  package-lock.json  package.json
examples/with-next-css/component/: hello-world.js
examples/with-next-css/pages/: _app.js  index.js
nextjs/: BUILD.bazel  defs.bzl  repositories.bzl  toolchain.bzl
nextjs/private/: BUILD.bazel  actions.bzl  launcher_template.sh  rules.bzl  toolchains_repo.bzl  versions.bzl
