# load(
#     "@ubiquitous_tech_rules_nextjs//nextjs:defs.bzl",
#     "nextjs",
#     "nextjs_dev",
# )

load(
    "@npm//@ubiquitoustech/rules_nextjs:index.bzl",
    "nextjs",
    "nextjs_dev",
)

nextjs(
    name = "prod",
    srcs = glob(["pages/**"]) + [
        ":styles.module.css",
        ":package.json",
        ":yarn.lock",
        "next.config.js",
        # ":tsconfig.json",
    ],
    deps = [
        "@npm//next",
        "@npm//react",
        "@npm//react-dom",
    ],
)

nextjs_dev(
    name = "dev",
    srcs = glob(["pages/**"]) + [
        ":styles.module.css",
        ":package.json",
        ":yarn.lock",
        ":next.config.js",
        # ":.babelrc",
        # ":tsconfig.json",
    ],
    # port = "4000",
    deps = [
        "@npm//next",
        "@npm//react",
        "@npm//react-dom",
    ],
)
