# load(
#     "@ubiquitous_tech_rules_nextjs//nextjs:defs.bzl",
#     "nextjs",
#     "nextjs_dev",
# )

load(
    "@npm//@ubiquitoustech/rules_nextjs:index.bzl",
    "nextjs",
    "nextjs_dev",
)

nextjs(
    name = "prod",
    srcs = glob(["pages/**", "component/**"]) + [
        ":style.css",
        ":package.json",
        ":yarn.lock",
        ":next.config.js",
        # ":tsconfig.json",
    ],
    # args = ["--profile",],
    deps = [
        "@npm//next",
        "@npm//react",
        "@npm//react-dom",
    ],
)



nextjs_dev(
    name = "dev",
    srcs = glob(["pages/**", "component/**"]) + [
        ":style.css",
        ":package.json",
        ":yarn.lock",
        "next.config.js",
        # ":tsconfig.json",
    ],
    # args = ["--profile",],
    deps = [
        "@npm//next",
        "@npm//react",
        "@npm//react-dom",
    ],
)

# PROD_BUNDLE = ":prod"

# history_server(
#     name = "prodserver",
#     data = [PROD_BUNDLE],
#     templated_args = ["-a $$(rlocation $(rootpath %s))" % PROD_BUNDLE],
# )
