# load(
#     "@ubiquitous_tech_rules_nextjs//nextjs:defs.bzl",
#     "nextjs",
#     "nextjs_dev",
# )

# this uses the npm package
load(
    "@npm//@ubiquitoustech/rules_nextjs:index.bzl",
    "nextjs",
    "nextjs_dev",
)

nextjs(
    name = "prod",
    srcs = glob([
        "pages/**",
        "component/**",
    ]) + [
        ":style.css",
        ":package.json",
        ":yarn.lock",
        ":next.config.js",
        "jsconfig.json",
        # ":tsconfig.json",
    ],
    # args = ["--profile",],
    deps = [
        "@npm//next",
        "@npm//react",
        "@npm//react-dom",
    ],
)

nextjs_dev(
    name = "dev",
    srcs = glob([
        "pages/**",
        "component/**",
    ]) + [
        ":style.css",
        ":package.json",
        ":yarn.lock",
        "next.config.js",
        "jsconfig.json",
        # ":tsconfig.json",
    ],
    # args = ["--profile",],
    deps = [
        "@npm//next",
        "@npm//next-transpile-modules",
        "@npm//react",
        "@npm//react-dom",
    ],
)
